--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21"
   },
   "overrides": {
-    "nth-check": "2.0.1"
+    "nth-check": "2.0.1",
+    "get-pixels": "https://github.com/random-tm/get-pixels"
   }
 }
